--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
+*.a
+*.d
+*.dylib
+*.gypi
+*.mk
+*.mo
+*.node
+*.o
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
+bower_components
+docs/_build
+gyp-mac-tool
+media/css/*.css
+media/locale/*
+node_modules/grunt-i18n-abide/node_modules/jsxgettext/node_modules/gettext-parser/node_modules/iconv/build
+node_modules/i18n-abide/node_modules/jsxgettext/node_modules/gettext-parser/node_modules/iconv/build
+uitest/captures/*
+node_modules
