--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "grunt-contrib-stylus": "~0.12.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-bower-task": "~0.3.4",
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-contrib-connect": "~0.6.0",
+    "underscore": "~1.5.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "connect-livereload": "~0.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
