--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "bower_components",
     "test",
     "tests",
-    "config", // Config is development only.
+    "config",
     "public/index.html"
   ],
   "dependencies": {
