--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-contrib-connect": "~0.6.0",
     "underscore": "~1.5.2",
     "grunt-contrib-watch": "~0.5.3",
-    "connect-livereload": "~0.3.2"
+    "connect-livereload": "~0.3.2",
+    "http-rewrite-middleware": "~0.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
