--- a/bower.json
+++ b/bower.json
@@ -25,24 +25,20 @@
     "backbone": "~1.1.0"
   },
   "exportsOverride": {
-    "backbone": {
-      "js": "backbone.js"
+    "backbone": {"js": "backbone.js"},
+    "jquery": {"js": "jquery.js"},
+    "chai": {"js": "chai.js"},
+    "mocha": {
+      "js": "mocha.js",
+      "css": "mocha.css"
     },
-    "jquery": {
-      "js": "jquery.js"
-    },
-    "normalize-css": {
-      "css": "normalize.css"
-    },
-    "nunjucks": {
-      "js": "browser/nunjucks-slim.js"
-    },
-    "requirejs": {
-      "js": "require.js"
-    },
-    "underscore": {
-      "js": "underscore.js"
-    }
-
+    "normalize-css": {"css": "normalize.css"},
+    "nunjucks": {"js": "browser/nunjucks-slim.js" },
+    "requirejs": {"js": "require.js"},
+    "underscore": {"js": "underscore.js"}
+  },
+  "devDependencies": {
+    "mocha": "~1.17.1",
+    "chai": "~1.9.0"
   }
 }
