--- a/package.json
+++ b/package.json
@@ -3,25 +3,18 @@
   "version": "0.0.1",
   "description": "Single Page app for webpay",
   "main": "media/js/main.js",
-  "dependencies": {
-    "grunt": "~0.4.2",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-concurrent": "~0.4.3",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-stylus": "~0.12.0"
-  },
   "devDependencies": {
-    "grunt-contrib-stylus": "~0.12.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-bower-task": "~0.3.4",
-    "grunt": "~0.4.2",
-    "grunt-contrib-connect": "~0.6.0",
-    "underscore": "~1.5.2",
-    "grunt-contrib-watch": "~0.5.3",
     "connect-livereload": "~0.3.2",
+    "expect": "0.0.2",
+    "grunt": "~0.4.2",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-stylus": "~0.12.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-nunjucks": "~0.1.3",
     "http-rewrite-middleware": "~0.1.3",
-    "grunt-nunjucks": "~0.1.3"
+    "underscore": "~1.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
