--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-nunjucks": "~0.1.3",
     "http-rewrite-middleware": "~0.1.3",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "mocha-phantomjs": "~3.3.2",
+    "grunt-shell": "~0.6.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
