--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "grunt-shell": "~0.6.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node -e \"require('grunt').cli()\" null test"
   },
   "repository": {
     "type": "git",
