--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "media/js/main.js",
   "devDependencies": {
     "connect-livereload": "~0.3.2",
-    "expect": "0.0.2",
+    "express": "~3.4.8",
     "grunt": "~0.4.2",
     "grunt-bower-task": "~0.3.4",
     "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-stylus": "~0.12.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-express-server": "~0.4.13",
+    "grunt-i18n-abide": "git+https://github.com/mozilla/grunt-i18n-abide.git",
     "grunt-nunjucks": "~0.1.3",
+    "grunt-shell": "~0.6.4",
     "http-rewrite-middleware": "~0.1.3",
-    "underscore": "~1.6.0",
+    "i18n-abide": "0.0.17",
     "mocha-phantomjs": "~3.3.2",
-    "grunt-shell": "~0.6.4"
+    "nunjucks": "~1.0.1",
+    "underscore": "~1.6.0"
   },
   "scripts": {
     "test": "node -e \"require('grunt').cli()\" null test"
