--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "grunt-contrib-stylus": "~0.12.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-express-server": "~0.4.13",
-    "grunt-i18n-abide": "git+https://github.com/mozilla/grunt-i18n-abide.git",
+    "grunt-i18n-abide": "0.0.9",
     "grunt-nunjucks": "~0.1.3",
     "grunt-shell": "~0.6.4",
     "http-rewrite-middleware": "~0.1.3",
