--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,11 @@ notifications:
   irc: "irc.mozilla.org#payments"
 install:
   - "npm install"
+before_script:
+   - git clone -q git://github.com/n1k0/casperjs.git
+   - cd casperjs; git checkout -q tags/1.1-beta1; cd ../
+   - export PATH=$PATH:`pwd`/casperjs/bin
+   - phantomjs --version; casperjs --version
 script:
   - "npm test"
+  - "npm run-script uitest"
