--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "mocha-phantomjs": "~3.3.2",
     "nunjucks": "~1.0.1",
     "underscore": "~1.6.0",
-    "js-beautify": "^1.4.2"
+    "js-beautify": "^1.4.2",
+    "grunt-casper": "^0.3.2",
+    "grunt-contrib-clean": "^0.5.0"
   },
   "scripts": {
-    "test": "node -e \"require('grunt').cli()\" null test"
+    "test": "node -e \"require('grunt').cli()\" null test",
+    "uitest": "node -e \"require('grunt').cli()\" null uitest"
   },
   "repository": {
     "type": "git",
