--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "express": "~3.4.8",
     "grunt": "~0.4.2",
     "grunt-bower-task": "~0.3.4",
-    "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-stylus": "~0.12.0",
     "grunt-contrib-watch": "~0.5.3",
@@ -23,7 +22,8 @@
     "underscore": "~1.6.0",
     "js-beautify": "^1.4.2",
     "grunt-casper": "^0.3.2",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-env": "^0.4.1"
   },
   "scripts": {
     "test": "node -e \"require('grunt').cli()\" null test",
