--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "express": "~3.4.8",
     "grunt": "~0.4.2",
     "grunt-bower-task": "~0.3.4",
+    "grunt-casper": "^0.3.2",
+    "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-stylus": "~0.12.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-env": "^0.4.1",
     "grunt-express-server": "~0.4.13",
     "grunt-i18n-abide": "0.0.9",
     "grunt-nunjucks": "~0.1.3",
     "grunt-shell": "~0.6.4",
     "http-rewrite-middleware": "~0.1.3",
     "i18n-abide": "0.0.17",
+    "js-beautify": "^1.4.2",
     "mocha-phantomjs": "~3.3.2",
     "nunjucks": "~1.0.1",
-    "underscore": "~1.6.0",
-    "js-beautify": "^1.4.2",
-    "grunt-casper": "^0.3.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-env": "^0.4.1"
+    "underscore": "~1.6.0"
   },
   "scripts": {
     "test": "node -e \"require('grunt').cli()\" null test",
