--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "express": "~3.4.8",
     "grunt": "~0.4.2",
     "grunt-bower-task": "~0.3.4",
-    "grunt-casper": "^0.3.2",
+    "grunt-casper": "0.3.8",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-stylus": "~0.12.0",
+    "grunt-contrib-stylus": "0.16.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "^0.4.1",
     "grunt-express-server": "~0.4.13",
