--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "~0.4.2",
     "grunt-bower-task": "~0.3.4",
     "grunt-casper": "0.3.8",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-stylus": "0.16.0",
