--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-casper": "0.3.8",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-stylus": "0.16.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "^0.4.1",
