--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "Single Page app for webpay",
   "main": "media/js/main.js",
   "devDependencies": {
-    "connect-livereload": "~0.3.2",
+    "connect-livereload": "0.5.0",
     "express": "~3.4.8",
-    "grunt": "~0.4.2",
-    "grunt-bower-task": "~0.3.4",
+    "grunt": "0.4.5",
+    "grunt-bower-task": "0.4.0",
     "grunt-casper": "0.4.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-stylus": "0.16.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-env": "^0.4.1",
-    "grunt-express-server": "~0.4.13",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-requirejs": "0.4.4",
+    "grunt-contrib-stylus": "0.20.0",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-env": "0.4.2",
+    "grunt-express-server": "0.4.19",
     "grunt-i18n-abide": "0.0.12",
-    "grunt-nunjucks": "~0.1.3",
-    "grunt-shell": "~0.6.4",
-    "http-rewrite-middleware": "~0.1.3",
+    "grunt-nunjucks": "0.1.4",
+    "grunt-shell": "1.1.1",
+    "http-rewrite-middleware": "0.1.6",
     "i18n-abide": "0.0.20",
-    "js-beautify": "^1.4.2",
-    "mocha-phantomjs": "~3.3.2",
-    "nunjucks": "~1.0.1",
-    "underscore": "^1.6.0"
+    "js-beautify": "1.5.4",
+    "mocha-phantomjs": "3.5.1",
+    "nunjucks": "1.1.0",
+    "underscore": "1.7.0"
   },
   "scripts": {
     "test": "node -e \"require('grunt').cli()\" null test",
