--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "media/js/main.js",
   "devDependencies": {
     "connect-livereload": "0.5.0",
-    "express": "~3.4.8",
+    "express": "4.10.2",
     "grunt": "0.4.5",
     "grunt-bower-task": "0.4.0",
     "grunt-casper": "0.4.1",
