--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: node_js
 node_js:
  - "0.10"
 notifications:
-  irc: "irc.mozilla.org#payments"
+  irc:
+    channels:
+      - "irc.mozilla.org#payments"
+    on_success: change
+    on_failure: always
 install:
   - "npm install"
 before_script:
