--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "underscore": "1.7.0"
   },
   "scripts": {
+    "start" : "node media/js/main.js",
     "test": "node -e \"require('grunt').cli()\" null test",
     "uitest": "node -e \"require('grunt').cli()\" null uitest"
   },
