--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "start" : "node -e \"require('grunt').cli()\" start",
     "test": "node -e \"require('grunt').cli()\" null test",
-    "uitest": "node -e \"require('grunt').cli()\" null uitest"
+    "uitest": "node -e \"require('grunt').cli()\" null uitest",
+    "uitest-slimer": "node -e \"require('grunt').cli()\" null uitest --engine slimerjs"
   },
   "repository": {
     "type": "git",
