Show phantom version and DRY up helper-shim

--- a/.jshintrc
+++ b/.jshintrc
@@ -25,9 +25,9 @@
     "describe",
     "expect",
     "exports",
-    "helpers",
     "it",
     "mocha",
+    "phantom",
     "process",
     "require",
     "setup",
